feat: 优化工作台显示，新增模型、提示词选项卡 fix: 目录高亮和定位

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^16.18.104",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "ace-builds": "^1.35.4",
     "axios": "^1.7.2",
     "babel-jest": "^27.4.2",
     "babel-loader": "^8.2.3",
@@ -46,6 +47,7 @@
     "postcss-preset-env": "^7.0.1",
     "prompts": "^2.4.2",
     "react": "^18.3.1",
+    "react-ace": "^12.0.0",
     "react-app-polyfill": "^3.0.0",
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.3.1",
