--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "css-minimizer-webpack-plugin": "^3.2.0",
     "dotenv": "^10.0.0",
     "dotenv-expand": "^5.1.0",
+    "echarts": "^5.5.1",
+    "echarts-wordcloud": "^2.1.0",
     "eslint": "^8.3.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-webpack-plugin": "^3.1.1",
@@ -55,6 +57,7 @@
     "react-redux": "^9.1.2",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^5.3.4",
+    "react-spinners": "^0.14.1",
     "redux": "^5.0.1",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
