--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dotenv": "^10.0.0",
     "dotenv-expand": "^5.1.0",
     "echarts": "^5.5.1",
+    "echarts-for-react": "^3.0.2",
     "echarts-wordcloud": "^2.1.0",
     "eslint": "^8.3.0",
     "eslint-config-react-app": "^7.0.1",
@@ -54,6 +55,7 @@
     "react-app-polyfill": "^3.0.0",
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.3.1",
+    "react-echarts": "^0.1.1",
     "react-redux": "^9.1.2",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^5.3.4",
